<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="medical.medicalapps.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <TextView
        android:id="@+id/labelHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingBottom="45dp"

        android:text="@string/str_register_head"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_firstname"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_lastname"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/str_email"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:inputType="textPersonName"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/labelPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_password"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"

                    android:inputType="textPassword"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/labelRetype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_retype"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtRetype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:inputType="textPassword"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.6"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/str_mobile"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"

                    android:inputType="text"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.6"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_age"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"

                    android:inputType="text"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.6"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_gender"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <Spinner
                    android:id="@+id/spinnGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:entries="@array/gender" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.6"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelBlood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_blood"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <Spinner
                    android:id="@+id/spinnBlood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:entries="@array/blood" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/str_address"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"

                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="4"
                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.6"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_city"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/txtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"


                    android:text="" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.6"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelisAlergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_allergies"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <RadioGroup
                    android:id="@+id/radioAllergies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/str_yes" />

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_no" />

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.6"
                android:text=""
                android:textColor="@color/black"
                android:textSize="20dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearAlergy"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelAlergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/str_select_allergies"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <medical.medicalapps.MultiSelectSpinner
                    android:id="@+id/spinnAlergi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_style"
                    android:text="" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty"
                    android:layout_marginRight="@dimen/twenty"
                    android:layout_marginTop="30dp"
                    android:background="@color/ping"

                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:text="@string/str_submit"
                    android:textColor="@color/black"


                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
