<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sky_color"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/logoid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="40dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/labelUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:paddingLeft="6dp"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="@dimen/twenty"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/txtUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="@dimen/ten"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_style"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/red"
                        android:textEditSuggestionItemLayout="@color/blue"
                        android:textSize="@dimen/twenty"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/labelPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="6dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/twenty"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/txtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="@dimen/ten"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_style"
                        android:inputType="textPassword"
                        android:textColor="@color/red"
                        android:textSize="@dimen/twenty" />


                    <TextView
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/twenty"
                        android:layout_marginRight="@dimen/twenty"
                        android:layout_marginTop="80dp"
                        android:background="@color/ping"
                        android:gravity="center"
                        android:onClick="loginAction"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/submit_btn"
                        android:textColor="@color/black"
                        android:textSize="@dimen/thirty" />

                    <TextView
                        android:id="@+id/btnSignin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/twenty"
                        android:layout_marginRight="@dimen/twenty"


                        android:gravity="center"
                        android:onClick="registerAction"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/submit_new"
                        android:textColor="@color/black"
                        android:textSize="@dimen/thirty" />





                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</RelativeLayout>
